Splitted in components and updated home

--- a/public/translations/en.json
+++ b/public/translations/en.json
@@ -177,8 +177,7 @@
       "title": "Now is your turn to have fun!",
       "description": "Start making cool stuff in the VR World just with a few lines of text.",
       "button": "Create your first story",
-      "by": "Made with ♥️ by <a href='https://twitter.com/impronunciable'>Dan Zajdband</a>",
-      "design_by": "Web design by <a href='https://twitter.com/abad'>Federico Abad</a>"
+      "by": "Made with ♥️ by <a href='https://twitter.com/impronunciable'>Dan Zajdband</a> - Web design by <a href='https://twitter.com/abad'>Federico Abad</a>"
     }
   },
   "login": {
