--- a/public/translations/es.json
+++ b/public/translations/es.json
@@ -179,8 +179,7 @@
       "title": "Ahora es tu turno de divertirte!",
       "description": "Empezá haciendo cosas geniales en el mundo de VR en solo unas líneas de texto.",
       "button": "Creá tu primera historia",
-      "by": "Hecho con ♥️ por <a href='https://twitter.com/impronunciable'>Dan Zajdband</a>",
-      "design_by": "Sitio diseñado por <a href='https://twitter.com/abad'>Federico Abad</a>"
+      "by": "Hecho con ♥️ por <a href='https://twitter.com/impronunciable'>Dan Zajdband</a> - Sitio diseñado por <a href='https://twitter.com/abad'>Federico Abad</a>"
     }
   },
   "login": {
