--- a/public/translations/es.json
+++ b/public/translations/es.json
@@ -1,6 +1,6 @@
 {
   "code_example": {
-    "run": "Comenzar la historia"
+    "run": "Ver la historia"
   },
   "guide": {
     "title": "Guía",
@@ -19,7 +19,7 @@
       "first": "Guri organiza tus historias en escenas secuenciales. Cada escena mapea directamente con un párrafo en tu descripción siempre y cuando especifiques al menos una entidad.",
       "second": "Podés crear cuantas escenas quieras pero nunca te olvides de que tenés que especificar la duración en segundos si querés que termine.",
       "third": "Ahora que sabes como crear escenas, veamos que tipo de elementos podes agregar a tus escenas:",
-      "preview": "Esta es mi primera escena. dura 4 segundos, tiene un fondo #87ceeb (eso es celeste en hexa) y muestra un texto que dice \"Esta es la primera escena\"\n\nEste párrafo nunca es interpretado porque no estoy agregando ninguna entidad. Este párrafo puede ser usado para describir la historia sin agregar elementos a la escena de RV.\n\nLa última escena dura 10 segundos y tiene un texto que dice \"Fin!\"."
+      "preview": "Esta es mi primera escena. dura <span class='cm-number'>4 segundos</span>, tiene un <span class='cm-atom'>fondo</span> <span class='cm-string'>#87ceeb</span> (eso es celeste en hexa) y muestra un <span class='cm-string'>texto</span> que dice <span class='cm-string'>\"Esta es la primera escena\"</span>\n\nEste párrafo nunca es interpretado porque no estoy agregando ninguna entidad. Este párrafo puede ser usado para describir la historia sin agregar elementos a la escena de RV.\n\nLa última escena dura <span class='cm-number'>10 segundos</span> y tiene un <span class='cm-atom'>texto</span> que dice <span class='cm-string'>\"Fin!\"</span>."
     },
     "entities": {
       "title": "Entidades",
@@ -31,77 +31,77 @@
       "required": "requerido",
       "optional": "opcional",
       "example": "Ejemplo",
-      "preview": "Quiero que mi escena tenga un fondo #ffc0cb (rosa) y una foto de un pokemon (por qué no?) https://gurivr.s3.amazonaws.com/c5155f5b-83eb-4729-873b-238abb916362-psyduck.png a mi izquierda, y hacelo pequeño por favor. Además agregá un texto que diga \"mira a tu izquieeeeerda!\""
+      "preview": "Quiero que mi escena tenga un <span class='cm-atom'>fondo</span> <span class='cm-string'>#ffc0cb</span> (rosa) y una <span class='cm-atom'>foto</span> de un pokemon (por qué no?) <span class='cm-string'>https://gurivr.s3.amazonaws.com/c5155f5b-83eb-4729-873b-238abb916362-psyduck.png</span> a mi <span class='cm-string'>izquierda</span>, y hacelo <span class='cm-string'>pequeño</span> por favor. Además agregá un <span class='cm-atom'>texto</span> que diga <span class='cm-string'>\"mira a tu izquieeeeerda!\"</span>"
     },
     "audio": {
       "title": "Audio",
       "description": "Fuente de audio en el espacio 3D. Puede ser posicionado en distintas partes de la escena. Necesita una url como fuente, el formato preferido es mp3.",
-      "preview": "Quiero una escena de 5 segundos con el texto \"Hola manola!\"\n\nDespués quiero una escena de 40 segundos con fondo #fff (blanco) y un audio alojado en https://gurivr.s3.amazonaws.com/86474203-6d3d-4d39-9342-5ed63dca56c6-santa.mp3 atrás mio",
+      "preview": "Quiero una escena de <span class='cm-number'>5 segundos</span> con el <span class='cm-atom'>texto</span> <span class='cm-string'>\"Hola manola!\"</span>\n\nDespués quiero una escena de <span class='cm-number'>40 segundos</span> con <span class='cm-atom'>fondo</span> <span class='cm-string'>#fff</span> (blanco) y un <span class='cm-atom'>audio</span> alojado en <span class='cm-string'>https://gurivr.s3.amazonaws.com/86474203-6d3d-4d39-9342-5ed63dca56c6-santa.mp3</string> <span class='cm-string'>atrás</span> mio",
       "keywords": "audio"
     },
     "panorama": {
       "title": "Panorama",
       "description": "Imagen esférica que envuelve la vista del usuario. Necesita una url de fuente. Funciona mejor con panoramas equirectangulares pero funciona con cualquier tipo de imagen.",
-      "preview": "Mi escena muestra un panorama alojado en https://gurivr.s3.amazonaws.com/7ec6043a-3924-4341-96ab-e8df10faaa93-pa.jpg"
+      "preview": "Mi escena muestra un <span class='cm-atom'>panorama</span> alojado en <span class='cm-string'>https://gurivr.s3.amazonaws.com/7ec6043a-3924-4341-96ab-e8df10faaa93-pa.jpg</span>"
     },
     "videosphere": {
       "title": "Video esfera",
       "description": "Video esférico que envuelve la vista del usuario. Necesita una url de fuente. Funciona mejor con videos equirectangulares pero funciona con cualquier tipo de video.",
-      "preview": "Mi escena dura 30 segundos y muestra una video esfera alojada en https://ucarecdn.com/bcece0a8-86ce-460e-856b-40dac4875f15/ y una voz en off que dice \"Este es el futuro. Ya se, no es tan bueno\"",
+      "preview": "Mi escena dura <span class='cm-number'>30 segundos</span> y muestra una <span class='cm-atom'>video esfera</span> alojada en <span class='cm-string'>https://ucarecdn.com/bcece0a8-86ce-460e-856b-40dac4875f15/</span> y una <span class='cm-'>voz en off</span> que dice <span class='cm-string'>\"Este es el futuro. Ya se, no es tan bueno\"</span>",
       "keywords": "video esfera"
     },
     "image": {
       "title": "Imagen",
       "description": "Imagen 2d que puede ser localizada dentro de la escena en distintas posiciones.",
       "keywords": "foto",
-      "preview": "Mi escena tiene fondo #0000ff (azul), una voz en off que dice \"mirá a tu derecha\" y una foto de un gatito https://gurivr.s3.amazonaws.com/7944cde7-b842-483f-a8b1-f953476b2cbb-gatito.png a mi derecha"
+      "preview": "Mi escena tiene <span class='cm-atom'>fondo</span> <span class='cm-string'>#0000ff</span> (azul), una <span class='cm-atom'>voz en off</span> que dice <span class='cm-string'>\"mirá a tu derecha\"</span> y una <span class='cm-atom'>foto</span> de un gatito <span class='cm-string'>https://gurivr.s3.amazonaws.com/7944cde7-b842-483f-a8b1-f953476b2cbb-gatito.png</span> a mi <span class='cm-string'>derecha</span>"
     },
     "video": {
       "title": "Video",
       "description": "Video 2d que puede ser localizado en distintas posiciones dentro de la escena.",
-      "preview": "Mi escena tiene un fondo #87ceeb y un video video de https://s3.amazonaws.com/gurivr/licha.mp4 a mi izquierda"
+      "preview": "Mi escena tiene un <span class='cm-atom'>fondo</span> <span class='cm-string'>#87ceeb</span> y un <span class='cm-atom'>video</span> de <span class='cm-string'>https://s3.amazonaws.com/gurivr/licha.mp4</span> a mi <span class='cm-string'>izquierda</span>"
     },
     "text": {
       "title": "Texto",
       "description": "Podés escribir texto y va a ser ubicado dentro de la pantalla. No hay soporte de color ni texto por ahora.",
       "keywords": "texto",
-      "preview": "Mi escena tiene fondo #f00 (rojo), un texto que me dice \"podes leer esto\" y otro texto que dice \"Say no more\" a mi izquierda"
+      "preview": "Mi escena tiene <span class='cm-atom'>fondo</span> <span class='cm-string'>#f00</span> (rojo), un <span class='cm-atom'>texto</span> que me dice <span class='cm-string'>\"podes leer esto\"</span> y otro <span class='cm-atom'>texto</span> que dice <span class='cm-string'>\"Say no more\"</span> a mi <span class='cm-string'>izquierda</span>"
     },
     "duration": {
       "title": "Duración",
       "description": "Es necesario especificar la duración de cada escena en segundos. De otro modo la escena no termina.",
       "keywords": "segundos",
-      "preview": "Mi escena dura 8 segundos, tiene un fondo #00f y un texto que dice \"Esto se termina pronto\""
+      "preview": "Mi escena dura <span class='cm-number'>8 segundos</span>, tiene un <span class='cm-atom'>fondo</span> <span class='cm-string'>#00f</span> y un <span class='cm-atom'>texto</span> que dice <span class='cm-string'>\"Esto se termina pronto\"</span>"
     },
     "voiceover": {
       "title": "Voz en off",
       "description": "Podés hacer que la computadora diga frases en voz alta. Esta funcionalidad solo anda en navegadores que soportan síntesis de voz.",
       "keywords": "voz en off",
-      "preview": "Mi escena dura 8 segundos y tiene una voz en off que dice \"Si me estás escuchando a mi, tu computadora, entonces tu computadora soporta síntesis de voz.\""
+      "preview": "Mi escena dura <span class='cm-number'>8 segundos</span> y tiene una <span class='cm-atom'>voz en off</span> que dice <span class='cm-string'>\"Si me estás escuchando a mi, tu computadora, entonces tu computadora soporta síntesis de voz.\"</span>"
     },
     "chart": {
       "title": "Gráfico",
       "description": "Toda funcionalidad acá es experimental pero esta lo es en serio. (En teoría) podés crear un gráfico en <a href='https://quartz.github.io/Chartbuilder/'>ChartBuilder</a>, arrastrar el json en el editor (o hostearlo por tu cuenta), y GuriVR va a dibujarlo como un gráfico 3D. Probalo y si no funciona <a href='https://github.com/opennewslabs/guri-vr/issues'>reportalo</a>.",
       "keywords": "gráfico",
-      "preview": "Mi escena tiene un fondo #eee y un gráfico de https://s3.amazonaws.com/gurivr/my-data.json frente a mi"
+      "preview": "Mi escena tiene un <span class='cm-atom'>fondo</span> <span class='cm-string'>#eee</span> y un <span class='cm-atom'>gráfico</span> de <span class='cm-string'>https://s3.amazonaws.com/gurivr/my-data.json</span> <span class='cm-string'>frente</span> a mi"
     },
     "sky": {
       "title": "Cielo",
       "description": "Tenemos disponible un hermoso cielo para tus escenas y podés determinar el momento del día en el que ocurre.",
       "keywords": "cielo",
-      "preview": "Mi escena muestra un lindo paisaje de un cielo al atardecer"
+      "preview": "Mi escena muestra un lindo paisaje de un <span class='cm-atom'>cielo</span> al <span class='cm-string'>atardecer</span>"
     },
     "background": {
       "title": "Fondo",
       "description": "Podés cambiar el fondo negro aburrido en cada escena por un color más lindo.",
       "keywords": "fondo",
-      "preview": "Mi escena dura tiene un fondo #ccc con un texto que dice \"Calaaaar\""
+      "preview": "Mi escena tiene un <span class='cm-atom'>fondo</span> <span class='cm-string'>#ccc</span> con un <span class='cm-atom'>texto</span> que dice <span class='cm-string'>\"Calaaaar\"</span>"
     },
     "3dmodel": {
       "title": "Modelos 3D",
       "description": "Otra funcionalidad <del>rota</del> experimental. Podés insertar modelos de Collada (.cae), Obj y Bake en las escenas.",
       "keywords": "modelo",
-      "preview": "My escena tiene un fondo #87ceeb y un modelo de un bosque de https://s3.amazonaws.com/gurivr/23f1972f-99c6-4f68-a0f0-392c16a02333-trees.dae podes moverte usando las teclas wasd 😎"
+      "preview": "My escena tiene un <span class='cm-atom'>fondo</span> <span class='cm-string'>#87ceeb</span> y un <span class='cm-atom'>modelo</span> de un bosque de <span class='cm-string'>https://s3.amazonaws.com/gurivr/23f1972f-99c6-4f68-a0f0-392c16a02333-trees.dae</span> podes moverte usando las teclas wasd 😎"
     },
     "search": {
       "title": "Búsqueda de recursos",
@@ -111,7 +111,7 @@
     "ar": {
       "title": "Modo Realidad Aumentada",
       "description": "RV y RA tienen mucho en común. Podés usar la camara de tu usuario como fondo en vez de un video o un panorama. Para hacer esto hay que escribir \"modo ra\" en cualquier punto de la historia. Usualmente lo hacemos al comienzo de la historia para dejarlo en claro.",
-      "preview": "Esta historia usa el modo ra\n\nLa única escena tiene un texto que dice \"Estamos en modo RA!\""
+      "preview": "Esta historia usa el <span class='cm-atom'>modo ra</span>\n\nLa única escena tiene un <span class='cm-atom'>texto</span> que dice <span class='cm-string'>\"Estamos en modo RA!\"</span>"
     },
     "speech_recognition": {
       "title": "Reconocimiento de voz",
